examples/test/testpolicy5135.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5135
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key10: value24
      key37: value15
      key13: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value42
      podSelector:
        matchLabels:
          key0: value29
          key10: value28
          key33: value2
